test/src/e2e_vm_tests/test_programs/should_fail/while_explicit_ret_2/src/main.sw
script;

fn main() -> u64 {
    while true {
        if true {        }
        return 0;
    };
}
